Fix code limit enable by default

--- a/scss/editor/code/_code_styling.scss
+++ b/scss/editor/code/_code_styling.scss
@@ -1,5 +1,5 @@
 body {
-    --limit-code-to-80-chars: enable;
+    --limit-code-to-80-chars: disable;
 }
 
 @container style(--limit-code-to-80-chars: enable) {
