Change interface font for better word count plugins to avoid constant size changes

--- a/publish.css
+++ b/publish.css
@@ -3789,7 +3789,7 @@ body {
 }
 
 body {
-  --limit-code-to-80-chars: enable;
+  --limit-code-to-80-chars: disable;
 }
 
 @container style(--limit-code-to-80-chars: enable) {
