--- a/publish.css
+++ b/publish.css
@@ -4670,6 +4670,7 @@ body {
 @container style(--image-centered: enable) {
   .markdown-rendered .image-embed:only-child {
     display: block;
+    width: fit-content;
     margin-inline: auto;
   }
   .markdown-rendered img:not(.image-embed img):not(.emoji):only-child {
@@ -4685,6 +4686,7 @@ body {
 }
 .markdown-rendered .image-embed[alt~=center]:only-child {
   display: block;
+  width: fit-content;
   margin-inline: auto;
 }
 
