Use "contain" for the sidebar texture if the sidedock aspect ratio is less than 0.4

--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -457,6 +457,18 @@ $fwi_sel: "";
     .fas-skin-art-deco.fas-bg-textures:not(.fas-sidebar-texture-custom) .mod-sidedock .workspace-leaf {
         background-repeat: no-repeat;
     }
+
+    @media (orientation: portrait) {
+        .mod-sidedock {
+            container-name: sidedock;
+            container-type: size;
+        }
+        @container sidedock (aspect-ratio < 0.4) {
+            .workspace-leaf:is(.fas-skin-art-deco.fas-bg-textures:not(.fas-sidebar-texture-custom) *) {
+                --sidebar-texture-size: contain; /* default is: auto 100% */
+            }
+        }
+    }
 }
 
 /* Properties */
