--- a/scss/cssclasses/_family-tree.scss
+++ b/scss/cssclasses/_family-tree.scss
@@ -1,9 +1,14 @@
-@forward '../shared/workleaves';
+@forward "../shared/workleaves";
 
 body {
     --family-tree-connectors-color: var(--background-secondary);
 }
 
+.callout[data-callout="family-tree"] {
+    --callout-icon: lucide-network;
+}
+
+.callout[data-callout="family-tree"] > .callout-content > ul,
 .family-tree .el-ul > ul {
     --list-spacing: 0;
     --list-indent: 0;
@@ -48,13 +53,15 @@ body {
     li.is-collapsed {
         text-wrap: nowrap;
     }
-    li.is-collapsed > ul > *  {
+    li.is-collapsed > ul > * {
         display: none;
     }
 
     // Spouse info tooltip
-    :is(.tag[href='#wed'], .wed) { display: none; }
-    :is(.tag[href='#wed'], .wed) + ul > li:first-child {
+    :is(.tag[href="#wed"], .wed) {
+        display: none;
+    }
+    :is(.tag[href="#wed"], .wed) + ul > li:first-child {
         display: none;
         position: absolute;
         left: 50%;
@@ -68,7 +75,7 @@ body {
         z-index: var(--layer-tooltip);
         top: 0;
     }
-    :is(.tag[href='#wed'], .wed) + ul > li:first-child::before {
+    :is(.tag[href="#wed"], .wed) + ul > li:first-child::before {
         content: "Wed to ";
         display: unset;
         position: unset;
@@ -76,14 +83,14 @@ body {
     }
 
     // Spouse ring icon
-    li:has(> :is(.tag[href='#wed'], .wed)) > .list-bullet {
+    li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet {
         display: inline-block;
         float: none;
         margin-inline-start: 0;
         margin-inline-end: 0.1em;
         transform: translateY(-0.2em);
     }
-    li:has(> :is(.tag[href='#wed'], .wed)) > .list-bullet::after {
+    li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after {
         content: "💍";
         position: static;
         margin: 0;
@@ -93,33 +100,35 @@ body {
         background: none;
         box-shadow: none;
     }
-    li:has(> :is(.tag[href='#wed'], .wed)):has(> .list-bullet:hover) > ul > li:first-child {
+    li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child {
         display: block;
     }
 
     // element with no child, or only a spouse (#wed)
     li:not(:has(ul)),
-    li:has(> :is(.tag[href='#wed'], .wed) + ul > li:only-child) {
+    li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) {
         text-wrap: nowrap;
-        .list-collapse-indicator { display: none; }
+        .list-collapse-indicator {
+            display: none;
+        }
     }
 
     ul:not(:has(ul))::before,
-    :is(.tag[href='#wed'], .wed) + ul:has(> li:only-child)::before {
+    :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
         height: 30px;
     }
 
     li:not(:has(ul))::after,
-    li:has(> :is(.tag[href='#wed'], .wed) + ul > li:only-child)::after {
+    li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child)::after {
         height: 20px;
     }
 
-    &, ul {
+    &,
+    ul {
         display: flex;
         padding-top: 10px;
         margin-top: 0px;
         position: relative;
-        background-color: var(--workleaves-background);
     }
 
     li {
@@ -142,7 +151,7 @@ body {
         height: 10px;
     }
 
-    :is(.tag[href='#wed'], .wed) + ul > li:first-child::after {
+    :is(.tag[href="#wed"], .wed) + ul > li:first-child::after {
         content: none;
     }
 
@@ -159,7 +168,7 @@ body {
     }
 
     // Remove left connector from first child and connector from last child
-    :is(.tag[href='#wed'], .wed) + ul > li:nth-child(2)::before,
+    :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before,
     li:first-child::before,
     li:last-child::after {
         border-top: none;
@@ -169,7 +178,7 @@ body {
     li:only-child {
         padding-top: 0;
     }
-    
+
     // Add downward connectors from parents
     ul::before {
         content: "";
@@ -186,25 +195,26 @@ body {
     }
 
     // Reduce heights for downward connectors if multiple childs
-    :is(.tag[href='#wed'], .wed) + ul:has(> li:nth-child(3))::before {
+    :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before {
         height: 10px;
     }
 
     // Remove downward connectors if no child
     ul:not(:has(> li))::before,
-    :is(.tag[href='#wed'], .wed) + ul:has(> li:only-child)::before {
+    :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
         content: none;
     }
 
     // Remove upwards connectors if only child
-    ul:not(:is(.tag[href='#wed'], .wed) + ul) > li:only-child::after,
-    :is(.tag[href='#wed'], .wed) + ul > li:nth-child(2):last-child::after {
+    ul:not(:is(.tag[href="#wed"], .wed) + ul) > li:only-child::after,
+    :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
         content: none;
     }
 }
 
 @media print {
-	.family-tree ul {
-    	--family-tree-connectors-color: var(--text-normal);
-	}
+    .callout[data-callout="family-tree"] ul,
+    .family-tree ul {
+        --family-tree-connectors-color: var(--text-normal);
+    }
 }
