Update family-tree doc for callouts

--- a/scss/cssclasses/_family-tree.scss
+++ b/scss/cssclasses/_family-tree.scss
@@ -138,6 +138,7 @@ body {
         position: relative;
         padding: 20px 5px 0 5px;
         margin-inline: auto;
+        flex-grow: 1;
     }
 
     li::before,
