--- a/scss/editor/headings/_h-display.scss
+++ b/scss/editor/headings/_h-display.scss
@@ -87,6 +87,7 @@
 
             .heading-collapse-indicator {
                 margin-inline-start: 0;
+                left: var(--size-4-2);
             }
         }
     }
