Add rainbow headers option

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -643,6 +643,9 @@ settings:
             - 
                 label: Accent color
                 value: fas-headings-accent
+            - 
+                label: Rainbow
+                value: fas-headings-rainbow
     - 
         id: h1
         title: First level headings (H1)
