--- a/scss/editor/headings/_headings-color.scss
+++ b/scss/editor/headings/_headings-color.scss
@@ -26,3 +26,13 @@
     --h5-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 60%);
     --h6-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 80%);
 }
+
+.fas-headings-rainbow,
+.headings-rainbow {
+    --h1-color: var(--color-rainbow-1);
+    --h2-color: var(--color-rainbow-2);
+    --h3-color: var(--color-rainbow-3);
+    --h4-color: var(--color-rainbow-4);
+    --h5-color: var(--color-rainbow-5);
+    --h6-color: var(--color-rainbow-6);
+}
