--- a/publish.css
+++ b/publish.css
@@ -4075,6 +4075,203 @@ body {
   --pattern-color: rgba(var(--color-red-rgb), 0.04);
 }
 
+body {
+  --image-shadow-offset: var(--size-4-2);
+  --image-shadow-stripe-thickness: 2px;
+  --image-shadow-stripe-gap: 4px;
+  --image-shadow-color: var(--background-primary-alt);
+}
+
+.image-embed {
+  font-size: 0;
+}
+
+.markdown-rendered .image-embed:is([alt~=right], [alt~=float-right]) {
+  float: right;
+  clear: right;
+  margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
+}
+
+.markdown-rendered .image-embed:is([alt~=left], [alt~=float-left]) {
+  float: left;
+  clear: left;
+  margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
+}
+
+.image-embed[alt~=gray] {
+  --image-shadow-color: rgba(var(--color-gray-rgb), 0.2);
+}
+
+.image-embed[alt~=brown] {
+  --image-shadow-color: rgba(var(--color-brown-rgb), 0.2);
+}
+
+.image-embed[alt~=red] {
+  --image-shadow-color: rgba(var(--color-red-rgb), 0.2);
+}
+
+.image-embed[alt~=orange] {
+  --image-shadow-color: rgba(var(--color-orange-rgb), 0.2);
+}
+
+.image-embed[alt~=yellow] {
+  --image-shadow-color: rgba(var(--color-yellow-rgb), 0.2);
+}
+
+.image-embed[alt~=green] {
+  --image-shadow-color: rgba(var(--color-green-rgb), 0.2);
+}
+
+.image-embed[alt~=cyan] {
+  --image-shadow-color: rgba(var(--color-cyan-rgb), 0.2);
+}
+
+.image-embed[alt~=blue] {
+  --image-shadow-color: rgba(var(--color-blue-rgb), 0.2);
+}
+
+.image-embed[alt~=purple] {
+  --image-shadow-color: rgba(var(--color-purple-rgb), 0.2);
+}
+
+.image-embed[alt~=pink] {
+  --image-shadow-color: rgba(var(--color-pink-rgb), 0.2);
+}
+
+img[alt~=black-and-white],
+img[alt~=b-w] {
+  filter: grayscale(100);
+}
+
+.image-embed[alt~=no-shadow] {
+  --image-shadow-offset: 0;
+}
+
+@container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
+  .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
+    z-index: 1;
+    width: fit-content;
+  }
+  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])),
+  .markdown-source-view.mod-cm6 .cm-line .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])),
+  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
+    padding-right: var(--image-shadow-offset, 0px);
+    padding-bottom: var(--image-shadow-offset, 0px);
+    display: inline-block;
+    height: fit-content;
+    width: fit-content;
+    position: relative;
+    font-size: 0;
+  }
+  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before,
+  .markdown-source-view.mod-cm6 .cm-line .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before,
+  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: var(--image-shadow-offset, 0px);
+    left: var(--image-shadow-offset, 0px);
+    right: 0;
+    bottom: 0;
+    border-radius: inherit;
+    background: repeating-linear-gradient(-45deg, var(--image-shadow-color), var(--image-shadow-color) var(--image-shadow-stripe-thickness), transparent var(--image-shadow-stripe-thickness), transparent calc(var(--image-shadow-stripe-thickness) + var(--image-shadow-stripe-gap)));
+  }
+}
+body {
+  --image-centered: disable;
+}
+
+@container style(--image-centered: enable) {
+  .markdown-rendered .image-embed:only-child {
+    display: block;
+    width: fit-content;
+    margin-inline: auto;
+  }
+  .markdown-rendered img:not(.image-embed img):not(.emoji):only-child {
+    display: block;
+    margin-inline: auto;
+  }
+}
+@container style(--image-centered: enable) and (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
+  .markdown-source-view .cm-content > .image-embed img {
+    display: block;
+    margin-inline: auto;
+  }
+}
+.markdown-rendered .image-embed[alt~=center]:only-child {
+  display: block;
+  width: fit-content;
+  margin-inline: auto;
+}
+
+.markdown-rendered img[alt~=center]:not(.image-embed img):not(.emoji):only-child {
+  display: block;
+  margin-inline: auto;
+}
+
+.markdown-source-view .cm-content > .image-embed[alt~=center] img {
+  display: block;
+  margin-inline: auto;
+}
+
+.view-content {
+  z-index: 0;
+}
+
+.markdown-preview-view .image-embed[alt~=background],
+.markdown-preview-view img[alt~=background]:not(.image-embed *) {
+  --image-shadow-offset: 0;
+  margin: 0px auto;
+  position: fixed;
+  width: calc(100cqw + 2 * var(--file-margins-inline));
+  height: 100cqh;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  mix-blend-mode: var(--fas-note-background-image-blend-mode);
+  opacity: var(--fas-note-background-image-opacity);
+  filter: blur(var(--fas-note-background-image-blur)) brightness(var(--fas-note-background-image-brightness));
+}
+.markdown-preview-view img[alt~=background] {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center top;
+}
+
+.markdown-source-view .image-embed[alt~=edit-hide],
+.markdown-source-view img[alt~=edit-hide]:not(.image-embed *) {
+  font-size: inherit;
+  opacity: 0;
+  height: calc(1em * var(--line-height-normal));
+}
+.markdown-source-view .image-embed[alt~=edit-hide] img,
+.markdown-source-view img[alt~=edit-hide]:not(.image-embed *) img {
+  height: 100%;
+}
+.markdown-source-view .image-embed[alt~=edit-icon] {
+  --image-shadow-offset: 0;
+  font-size: inherit;
+}
+.markdown-source-view .image-embed[alt~=edit-icon] img {
+  display: none;
+}
+.markdown-source-view .image-embed[alt~=edit-icon]:hover img {
+  position: absolute;
+  display: block;
+}
+.markdown-source-view .image-embed[alt~=edit-icon]::after {
+  content: "🖼️ background";
+  font-size: 12px;
+  color: var(--text-muted);
+}
+.markdown-source-view .image-embed[alt~=edit-small],
+.markdown-source-view img[alt~=edit-small]:not(.image-embed *) {
+  --image-shadow-offset: 0;
+  max-width: 100px;
+}
+
 .footnotes {
   position: relative;
 }
@@ -4879,145 +5076,6 @@ body {
 body {
   /* https://commons.wikimedia.org/wiki/File:LF_Ornament_Black_Right_Down.svg */
   --fleuron: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="279.4mm" height="152.4mm" fill="black" stroke-width="0" viewBox="0 0 279.4 152.4"><path class="fil0 str0" d="M277.581 151.999l0 -13.7038c-5.2453,0 -9.2621,-1.3233 -12.0031,-4.0168 -2.6935,-2.6935 -5.2922,-7.7971 -7.797,-15.3575l-2.2208 -6.9464c-5.0092,-15.3106 -13.1367,-25.3759 -24.5253,-30.1959 10.538,-2.0321 18.9021,-6.3325 25.1398,-12.948 6.2376,-6.5686 9.3564,-14.4125 9.3564,-23.4386 0,-12.6639 -4.7731,-23.1076 -14.2713,-31.3768 -9.4982,-8.2698 -21.5482,-12.381 -36.1025,-12.381 -22.1627,0 -39.2688,9.4982 -51.3662,28.4947l10.6323 9.0255c7.8445,-8.411 15.9251,-12.6171 24.2417,-12.6171 6.8047,0 12.6645,2.2214 17.5788,6.7104 4.8675,4.489 7.3249,9.8292 7.3249,16.0194 0,5.151 -1.9378,9.64 -5.7654,13.4202 -3.8277,3.7808 -8.3167,5.6706 -13.4677,5.6706 -9.309,0 -22.3988,-6.6155 -39.1739,-19.7996l-8.459 -6.663c-27.4074,-21.5956 -53.5395,-32.3697 -78.4901,-32.3697 -21.5956,0 -39.8833,7.0882 -54.8629,21.3121 -14.9796,14.2239 -22.4931,31.5192 -22.4931,51.9333 0,20.6976 7.7496,37.3784 23.2494,50.1372 15.4992,12.7114 35.8664,19.0908 61.0531,19.0908l4.5839 0 0 -13.7038c-14.9327,-0.9923 -26.7935,-6.1902 -35.5829,-15.5941 -8.7425,-9.3564 -13.1372,-21.5007 -13.1372,-36.4809 0,-14.7435 5.5288,-27.4074 16.5864,-37.8511 11.1051,-10.4906 24.4784,-15.7359 40.1668,-15.7359 15.1214,0 28.589,4.6314 40.4029,13.8461 11.8139,9.2146 17.7206,19.7521 17.7206,31.566 0,5.6231 -1.843,10.3963 -5.4814,14.2708 -3.639,3.8751 -8.128,5.8123 -13.4676,5.8123 -5.3871,0 -9.4039,-1.4645 -12.1449,-4.3472 -2.6935,-2.9296 -4.0637,-7.3243 -4.0637,-13.2316 0,-3.591 0.9923,-7.8439 3.0245,-12.7588l-12.4284 -5.6706c-5.5288,13.0898 -8.3167,24.1 -8.3167,32.9369 0,10.9158 3.5441,20.2248 10.5849,28.0219 7.0413,7.797 15.5941,11.7196 25.5176,11.7196 6.3794,0 12.1918,-1.5594 17.4845,-4.7257 5.2453,-3.1188 9.9235,-7.8445 14.0821,-14.2239 5.3871,13.3733 13.8455,22.7772 25.4228,28.1168 11.5778,5.3396 29.1566,8.0332 52.6895,8.0332l28.7782 0zm-99.6605 -67.5743c13.562,2.5992 25.9429,13.8929 37.1892,33.9292l2.3631 4.0163c4.9144,8.6476 10.821,14.3182 17.7206,17.0117 -35.2525,0 -54.3433,-18.3345 -57.2729,-54.9572z"/></svg>');
-}
-
-body {
-  --image-shadow-offset: var(--size-4-2);
-  --image-shadow-stripe-thickness: 2px;
-  --image-shadow-stripe-gap: 4px;
-  --image-shadow-color: var(--background-primary-alt);
-}
-
-.image-embed {
-  font-size: 0;
-}
-
-.markdown-rendered .image-embed:is([alt~=right], [alt~=float-right]) {
-  float: right;
-  clear: right;
-  margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
-}
-
-.markdown-rendered .image-embed:is([alt~=left], [alt~=float-left]) {
-  float: left;
-  clear: left;
-  margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
-}
-
-.image-embed[alt~=gray] {
-  --image-shadow-color: rgba(var(--color-gray-rgb), 0.2);
-}
-
-.image-embed[alt~=brown] {
-  --image-shadow-color: rgba(var(--color-brown-rgb), 0.2);
-}
-
-.image-embed[alt~=red] {
-  --image-shadow-color: rgba(var(--color-red-rgb), 0.2);
-}
-
-.image-embed[alt~=orange] {
-  --image-shadow-color: rgba(var(--color-orange-rgb), 0.2);
-}
-
-.image-embed[alt~=yellow] {
-  --image-shadow-color: rgba(var(--color-yellow-rgb), 0.2);
-}
-
-.image-embed[alt~=green] {
-  --image-shadow-color: rgba(var(--color-green-rgb), 0.2);
-}
-
-.image-embed[alt~=cyan] {
-  --image-shadow-color: rgba(var(--color-cyan-rgb), 0.2);
-}
-
-.image-embed[alt~=blue] {
-  --image-shadow-color: rgba(var(--color-blue-rgb), 0.2);
-}
-
-.image-embed[alt~=purple] {
-  --image-shadow-color: rgba(var(--color-purple-rgb), 0.2);
-}
-
-.image-embed[alt~=pink] {
-  --image-shadow-color: rgba(var(--color-pink-rgb), 0.2);
-}
-
-img[alt~=black-and-white],
-img[alt~=b-w] {
-  filter: grayscale(100);
-}
-
-.image-embed[alt~=no-shadow] {
-  --image-shadow-offset: 0;
-}
-
-@container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
-  .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
-    z-index: 1;
-    width: fit-content;
-  }
-  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])),
-  .markdown-source-view.mod-cm6 .cm-line .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])),
-  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
-    padding-right: var(--image-shadow-offset, 0px);
-    padding-bottom: var(--image-shadow-offset, 0px);
-    display: inline-block;
-    height: fit-content;
-    width: fit-content;
-    position: relative;
-    font-size: 0;
-  }
-  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before,
-  .markdown-source-view.mod-cm6 .cm-line .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before,
-  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: var(--image-shadow-offset, 0px);
-    left: var(--image-shadow-offset, 0px);
-    right: 0;
-    bottom: 0;
-    border-radius: inherit;
-    background: repeating-linear-gradient(-45deg, var(--image-shadow-color), var(--image-shadow-color) var(--image-shadow-stripe-thickness), transparent var(--image-shadow-stripe-thickness), transparent calc(var(--image-shadow-stripe-thickness) + var(--image-shadow-stripe-gap)));
-  }
-}
-body {
-  --image-centered: disable;
-}
-
-@container style(--image-centered: enable) {
-  .markdown-rendered .image-embed:only-child {
-    display: block;
-    width: fit-content;
-    margin-inline: auto;
-  }
-  .markdown-rendered img:not(.image-embed img):not(.emoji):only-child {
-    display: block;
-    margin-inline: auto;
-  }
-}
-@container style(--image-centered: enable) and (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
-  .markdown-source-view .cm-content > .image-embed img {
-    display: block;
-    margin-inline: auto;
-  }
-}
-.markdown-rendered .image-embed[alt~=center]:only-child {
-  display: block;
-  width: fit-content;
-  margin-inline: auto;
-}
-
-.markdown-rendered img[alt~=center]:not(.image-embed img):not(.emoji):only-child {
-  display: block;
-  margin-inline: auto;
-}
-
-.markdown-source-view .cm-content > .image-embed[alt~=center] img {
-  display: block;
-  margin-inline: auto;
 }
 
 body {
