Fix edit-hide + doc

--- a/scss/editor/embeds/_embeds.scss
+++ b/scss/editor/embeds/_embeds.scss
@@ -1,8 +1,8 @@
 @use "audio-cassette";
+@use "embed-background-image";
 @use "embed-faded";
 @use "embed-full-width-image";
 @use "embed-pdfs";
 @use "embed-wide";
 @use "embeds-mod-empty";
 @use "image";
-@use "image-background";
