--- a/snippets/editor/embeds/embed-background-image.css
+++ b/snippets/editor/embeds/embed-background-image.css
@@ -7,8 +7,8 @@ Author: ElsaTam (Kapirklaa in Discord)
   z-index: 0;
 }
 
-.markdown-preview-view .image-embed[alt~=background],
-.markdown-preview-view img[alt~=background]:not(.image-embed *) {
+.markdown-preview-view.markdown-preview-view .image-embed[alt~=background],
+.markdown-preview-view.markdown-preview-view img[alt~=background]:not(.image-embed *) {
   --image-shadow-offset: 0;
   margin: 0px auto;
   position: fixed;
@@ -22,7 +22,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   opacity: var(--fas-note-background-image-opacity);
   filter: blur(var(--fas-note-background-image-blur)) brightness(var(--fas-note-background-image-brightness));
 }
-.markdown-preview-view img[alt~=background] {
+.markdown-preview-view.markdown-preview-view img[alt~=background] {
   height: 100%;
   width: 100%;
   object-fit: cover;
