Fix hr in compact mode

--- a/scss/cssclasses/_compact.scss
+++ b/scss/cssclasses/_compact.scss
@@ -6,8 +6,8 @@
     --table-cell-vertical-alignment: middle;
     --p-spacing: 0.6rem;
     --heading-spacing: calc(var(--p-spacing) * 1.5);
-    --line-height-normal: 1.25em;
-    --line-height-tight: 1em;
+    --line-height-normal: 1.25;
+    --line-height-tight: 1;
     --metadata-padding: var(--size-4-3) var(--size-4-1) var(--size-4-1) var(--size-4-1);
 
     // ========== CALLOUTS
